// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse props items should work 1`] = `
<div
  class="rc-collapse"
>
  <div
    class="rc-collapse-item"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="rc-collapse-header"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-collapse-expand-icon"
      >
        <i
          class="arrow"
        />
      </div>
      <span
        class="rc-collapse-header-text"
      >
        title
      </span>
    </div>
  </div>
  <div
    class="rc-collapse-item rc-collapse-item-disabled"
  >
    <div
      aria-disabled="true"
      aria-expanded="false"
      class="rc-collapse-header"
      role="button"
      tabindex="-1"
    >
      <div
        class="rc-collapse-expand-icon"
      >
        <i
          class="arrow"
        />
      </div>
      <span
        class="rc-collapse-header-text"
      >
        title 2
      </span>
    </div>
  </div>
</div>
`;

exports[`collapse props items should work with nested 1`] = `
<div
  class="rc-collapse"
>
  <div
    class="rc-collapse-item"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="rc-collapse-header"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-collapse-expand-icon"
      >
        <i
          class="arrow"
        />
      </div>
      <span
        class="rc-collapse-header-text"
      >
        title
      </span>
    </div>
  </div>
  <div
    class="rc-collapse-item rc-collapse-item-disabled"
  >
    <div
      aria-disabled="true"
      aria-expanded="false"
      class="rc-collapse-header"
      role="button"
      tabindex="-1"
    >
      <div
        class="rc-collapse-expand-icon"
      >
        <i
          class="arrow"
        />
      </div>
      <span
        class="rc-collapse-header-text"
      >
        title 2
      </span>
    </div>
  </div>
  <div
    class="rc-collapse-item"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="rc-collapse-header"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-collapse-expand-icon"
      >
        <i
          class="arrow"
        />
      </div>
      <span
        class="rc-collapse-header-text"
      >
        title 3
      </span>
    </div>
  </div>
</div>
`;
